asterisk widget hide

--- a/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
@@ -163,7 +163,7 @@
 			<span style="font-size: 12px;position: relative;top: 2px;">*</span>
 
 			<span style="font-size: 10px;">{{agile_lng_translate 'widjets' 'we-recommend-bria'}}</span>
-			{else}}
+			{{else}}
 				{{#if_equals name "Asterisk"}}
 					<br/>
 					<span style="font-size: 10px;">{{agile_lng_translate 'widgets' 'run-as-admin-in-windows'}}</span>
