ui fixes in tickets
Conflicts:
	agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/helpcenter-add-catogery-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/helpcenter-add-catogery-template.html
@@ -1,5 +1,5 @@
 <script id="helpcenter-add-catogery-template" type="text/html">
-<div class="">
+<div class="{{#isNewTheme}}addCategory col-md-10{{else}}{{/isNewTheme}}">
     <div class="row">
     	<div class="col-md-10">
         	<div class="panel panel-default">
