--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -13,12 +13,12 @@
               <div class="row">
                   <input type="hidden" id="contact_id" name="contact_id">
                   <input type="hidden" id="requester_name" name="requester_name">
-                  <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'menu' 'email'}}</b> 
+                  <div class="control-group col-md-12">
+                      <label class="control-label">{{agile_lng_translate 'menu' 'email'}} 
                       <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="requester_email" autocomplete="off" name="requester_email" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" class="required form-control tickets_email">
-                        <a class="text-xs pull-right link-color add-ticket-contact" href="javascript:void(0);">
+                        <a class="text-xs pull-left m-t-xs link-color add-ticket-contact" href="javascript:void(0);">
                           {{agile_lng_translate 'tickets' 'add-new-contact'}}
                         </a>
                       </span>
@@ -29,15 +29,15 @@
             <div class="control-group form-group new-contact-row display-none m-b-sm">
               <div class="row">
                   <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'other' 'first-name'}}</b> <span class="field_req">*</span></label>
+                      <label class="control-label">{{agile_lng_translate 'other' 'first-name'}} <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="first_name" autocomplete="off" name="first_name" placeholder="{{agile_lng_translate 'tickets' 'eg-mark'}}" 
                         class="required form-control">
                       </span>
                   </div>
                   <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'other' 'last-name'}}
-                      </b></label>
+                      <label class="control-label">{{agile_lng_translate 'other' 'last-name'}}
+                      </label>
                       <span class="controls">
                         <input type="text" id="last_name" autocomplete="off" name="last_name" placeholder="{{agile_lng_translate 'tickets' 'eg-twain'}}" 
                         class="form-control">
@@ -48,7 +48,7 @@
             <div class="control-group form-group new-contact-row display-none m-b-sm">
               <div class="row">
                   <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'menu' 'email'}}</b> 
+                      <label class="control-label">{{agile_lng_translate 'menu' 'email'}} 
                       <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="email_input" autocomplete="off" name="email_input" placeholder="{{agile_lng_translate 'tickets' 'eg-email'}}" class="required form-control tickets_email">
@@ -63,19 +63,19 @@
             </div>
             <div class="control-group form-group">
               <div class="row">
-                  <div class="control-group col-md-6">
-                    <label class="control-label"><b>{{agile_lng_translate 'other' 'subject'}}</b> 
+                  <div class="control-group col-md-12">
+                    <label class="control-label">{{agile_lng_translate 'other' 'subject'}}
                     <span class="field_req">*</span></label>
                     <span class="controls">
                       <input type="text" name="subject" autocomplete="off" class="form-control required"  placeholder="{{agile_lng_translate 'other' 'subject'}}">
                     </span>
                   </div>
-                  <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'contact-details' 'cc'}}</b></label>
+                  <div class="control-group col-md-12">
+                      <label class="control-label">{{agile_lng_translate 'contact-details' 'cc'}}</label>
                       <span class="controls">
                         <div class="cc-emails-st">
                           <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
-                              <li class="tag m-r-xs m-b-xs inline-block tag-new-theme">
+                              <li class="tag m-r-xs m-b-xs inline-block tag-li tag-new-theme">
                                 <input type="text" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" id="cc_email_field" class="cc_emails_st" autocomplete="off">
                               </li>
                           </ul>
@@ -87,7 +87,7 @@
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-6">
-                    <label class="control-label"><b>{{agile_lng_translate 'portlets' 'status'}}</b></label>
+                    <label class="control-label">{{agile_lng_translate 'portlets' 'status'}}</label>
                       <span class="controls">
                         <select id="status" name="status" class="form-control status">
                             <option value="OPEN">{{agile_lng_translate 'contact-details' 'OPEN'}}
@@ -100,8 +100,8 @@
                       </span>
                   </div>
                   <div class="control-group col-md-6">
-                      <label class="control-label"><b>{{agile_lng_translate 'tasks' 'priority'}}
-                      </b></label>
+                      <label class="control-label">{{agile_lng_translate 'tasks' 'priority'}}
+                      </label>
                       <span class="controls">
                         <select id="priority" name="priority" class="form-control">
                             <option value="LOW">{{agile_lng_translate 'tasks' 'Low'}}</option>
@@ -116,8 +116,8 @@
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-6">
-                    <label class="control-label"><b>{{agile_lng_translate 'tickets' 'assignee'}}
-                    </b></label>
+                    <label class="control-label">{{agile_lng_translate 'tickets' 'assignee'}}
+                    </label>
                       <span class="controls">
                         <select id="groupID" name="groupID" class="form-control required group_id">
                           
@@ -125,7 +125,7 @@
                       </span>
                   </div>
                   <div class="control-group col-md-6">
-                      <label class="control-label block"><b>{{agile_lng_translate 'tickets' 'labels'}}</b></label>
+                      <label class="control-label block">{{agile_lng_translate 'tickets' 'labels'}}</label>
                       <span class="controls">
                         <select name="labels" data-placeholder="{{agile_lng_translate 'tickets' 'search-labels'}}" class="chosen-select form-control" multiple class="w-md">
                         </select>
@@ -136,7 +136,7 @@
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-12">
-                    <label class="control-label"><b>{{agile_lng_translate 'other' 'message'}}</b> 
+                    <label class="control-label">{{agile_lng_translate 'other' 'message'}}
                     <span class="field_req">*</span></label>
                     <span class="controls">
                       <textarea name="html_text" class="form-control required create_ticket_textarea" style="min-height:76px;max-height:400px;text-indent: 0px; overflow-y: hidden; resize: none;padding: 8px;"></textarea>
