--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -18,6 +18,7 @@
                       <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="requester_email" autocomplete="off" name="requester_email" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" class="required form-control tickets_email">
+                        <i class="icon-plus-sign pull-left m-t-xs link-color"></i>
                         <a class="text-xs pull-left m-t-xs link-color add-ticket-contact" href="javascript:void(0);">
                           {{agile_lng_translate 'tickets' 'add-new-contact'}}
                         </a>
@@ -70,6 +71,10 @@
                       <input type="text" name="subject" autocomplete="off" class="form-control required"  placeholder="{{agile_lng_translate 'other' 'subject'}}">
                     </span>
                   </div>
+              </div>
+            </div>
+            <div class="control-group form-group">
+              <div class="row">
                   <div class="control-group col-md-12">
                       <label class="control-label">{{agile_lng_translate 'contact-details' 'cc'}}</label>
                       <span class="controls">
@@ -87,19 +92,6 @@
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-6">
-                    <label class="control-label">{{agile_lng_translate 'portlets' 'status'}}</label>
-                      <span class="controls">
-                        <select id="status" name="status" class="form-control status">
-                            <option value="OPEN">{{agile_lng_translate 'contact-details' 'OPEN'}}
-                            </option>
-                            <option value="PENDING">{{agile_lng_translate 'tickets' 'pending'}}
-                            </option>
-                            <option value="CLOSED">{{agile_lng_translate 'cases' 'closed'}}
-                            </option>
-                        </select>
-                      </span>
-                  </div>
-                  <div class="control-group col-md-6">
                       <label class="control-label">{{agile_lng_translate 'tasks' 'priority'}}
                       </label>
                       <span class="controls">
@@ -108,6 +100,19 @@
                             <option value="MEDIUM">{{agile_lng_translate 'tickets' 'medium'}}
                             </option>
                             <option value="HIGH">{{agile_lng_translate 'tasks' 'High'}}</option>
+                        </select>
+                      </span>
+                  </div>
+                  <div class="control-group col-md-6">
+                      <label class="control-label">{{agile_lng_translate 'portlets' 'status'}}</label>
+                      <span class="controls">
+                        <select id="status" name="status" class="form-control status">
+                            <option value="OPEN">{{agile_lng_translate 'contact-details' 'OPEN'}}
+                            </option>
+                            <option value="PENDING">{{agile_lng_translate 'tickets' 'pending'}}
+                            </option>
+                            <option value="CLOSED">{{agile_lng_translate 'cases' 'closed'}}
+                            </option>
                         </select>
                       </span>
                   </div>
