--- a/agile-frontend/WebContent/flatfull/header.html
+++ b/agile-frontend/WebContent/flatfull/header.html
@@ -575,7 +575,8 @@ color: #78909c !important;
 
                                                         </li> -->
 
-                              <li class="support-help-icon" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Help"><a href="https://www.agilecrm.com/support" target="_blank"><i class='fa fa-question-circle text-md'></i></a></li>
+                             <!--  <li class="support-help-icon" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Help"><a href="https://www.agilecrm.com/support" target="_blank"><i class='fa fa-question-circle text-md'></i></a></li> -->
+                             
 						     <li id="recent-menu" class="dropdown" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="<%=LanguageUtil.getLocaleJSONValue(localeJSON, "recent") %>"><a
 								class="dropdown-toggle" data-toggle="dropdown" href="" onclick="Agile_GA_Event_Tracker.track_event('Activity Option in Nav Bar')"> <i class='icon-clock'></i>
 								<i class='material-icons' style="display: none;">history</i>
