--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -75,7 +75,7 @@
                       <span class="controls">
                         <div class="cc-emails-st">
                           <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
-                              <li class="tag m-r-xs m-b-xs inline-block">
+                              <li class="tag m-r-xs m-b-xs inline-block tag-new-theme">
                                 <input type="text" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" id="cc_email_field" class="cc_emails_st" autocomplete="off">
                               </li>
                           </ul>
