--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
@@ -11,26 +11,31 @@
          <table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color:#FFFFFF;" data-type="imgcaption">
             <tbody>
                <tr>
-                  <td class="image-caption" style="padding: 0px 50px 15px 50px;">
+                  <td class="image-caption" style="padding: 5px 50px 5px 50px;">
                      <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                            <td>
-                              <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240" style="margin: 0 auto;">
+                              <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240">
                                 <tbody>
                                     <tr>
-                                        <td height="15" width="100%"></td>
+                                        <td height="10" width="100%"></td>
                                     </tr>
                                         <tr>
                                             <td align="center" class="image-caption-content image imageInColumn">
-                                            <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;" width="265" height="140" border="0" >
+                                            <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;max-width:265px;" width="265" height="140" data-maxwidth="430" border="0" >
                                             </td>
                                         </tr>
+
+                                        <tr>
+                                            <td height="10" width="100%"></td>
+                                        </tr>
+
                                 </tbody>
                               </table>
                               <table class="image-caption-column-text" align="right" border="0" cellpadding="0" cellspacing="0" width="240" data-align="right">
                                  <tbody>
                                     <tr>
-                                        <td height="15" width="100%"></td>
+                                        <td height="10" width="100%"></td>
                                     </tr>
                                         <tr>
                                             <td class="text-block block-text" >
@@ -39,6 +44,11 @@
                                             </div>
                                             </td>
                                         </tr>
+
+                                        <tr>
+                                            <td height="10" width="100%"></td>
+                                        </tr>
+
                                 </tbody>
                               </table>
                            </td>
