fixed image-caption preview

--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
@@ -11,10 +11,11 @@
          <table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color:#FFFFFF;" data-type="imgcaption">
             <tbody>
                <tr>
-                  <td class="image-caption" style="padding: 5px 50px 5px 50px;">
+                  <td style="padding: 10px 0px;">
                      <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
-                        <tr>
-                           <td>
+                       <tbody>
+                         <tr>
+                           <td class="image-caption" style="padding: 0px 50px 0px 50px;">
                               <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240">
                                 <tbody>
                                     <tr>
@@ -38,11 +39,9 @@
                                         <td height="10" width="100%"></td>
                                     </tr>
                                         <tr>
-                                            <td class="text-block block-text" >
-                                            <div style="ine-height: 22px;" class="textFix">
-                                            Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                            </div>
-                                            </td>
+                                            <td class="text-block block-text">
+                                             <div style="font-family: Arial, &quot;Helvetica Neue&quot;, Helvetica, sans-serif; font-size: 12px; line-height: 16px; outline: none;" helvetica="" neue",="" helvetica,="" sans-serif;="" font-size:="" 12px;="" line-height:="" 22px;"="" class="textFix"><div style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div></div>
+                                             </td>
                                         </tr>
 
                                         <tr>
@@ -53,6 +52,7 @@
                               </table>
                            </td>
                         </tr>
+                      </tbody>
                      </table>
                   </td>
                </tr>
