add widget from number

--- a/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
@@ -77,7 +77,7 @@
         			      </span>
                     </label>
 				    <div class="controls" id="contactTypeAhead">
-			          <select name="twilio_number" id="twilio_number" class="form-control" required>	</select>
+			          <select name="twilio_number" id="twilio_number" class="form-control">	</select>
   			        </div> 
 			    </div>     
 
