--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -1,9 +1,11 @@
 <script id="ticket-new-modal-template" type="text/html">
 <div class="modal-dialog">
   <div class="modal-content">
-    <div class="modal-header">
+    <div class="modal-header ticket-modal-header">
       <button class="close" data-dismiss="modal">&times;</button>
-      <h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
+      <div class="ticket-modal-heading">
+      <i class="fa fa-envelope pull-left block" style="margin-top: 4px;margin-right: 7px;"></i><h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
+      </div>
     </div>
     <div id="modal-body">
       <div class="modal-body">
@@ -53,7 +55,7 @@
                       <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="email_input" autocomplete="off" name="email_input" placeholder="{{agile_lng_translate 'tickets' 'eg-email'}}" class="required form-control tickets_email">
-                        <a class="text-xs pull-right link-color add-ticket-contact" href="javascript:void(0);">
+                        <a class="text-xs pull-right link-color add-ticket-contact m-t-xs" href="javascript:void(0);">
 
                           {{agile_lng_translate 'tickets' 'search-contact'}}
 
@@ -80,8 +82,9 @@
                       <span class="controls">
                         <div class="cc-emails-st">
                           <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
-                              <li class="tag m-r-xs m-b-xs inline-block tag-li tag-new-theme">
+                              <li class="tag m-r-xs m-b-xs block tag-li tag-new-theme">
                                 <input type="text" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" id="cc_email_field" class="cc_emails_st" autocomplete="off">
+                                <i class="fa fa-envelope pull-right m-t-xs"></i>
                               </li>
                           </ul>
                         </div>  
