--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -4,7 +4,7 @@
     <div class="modal-header ticket-modal-header">
       <button class="close" data-dismiss="modal">&times;</button>
       <div class="ticket-modal-heading">
-      <i class="fa fa-envelope pull-left block" style="margin-top: 4px;margin-right: 7px;"></i><h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
+      <i class="icon-plus-sign" style="margin-top: 4px;margin-right: 7px;"></i><h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
       </div>
     </div>
     <div id="modal-body">
@@ -155,7 +155,7 @@
           </fieldset>  
         </form>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer ticket-modal-footer">
           <span class="form-action-error pull-left" style="color: red;"></span>
           <a href="javascript:void(0);" data-dismiss="modal" class="btn btn-sm btn-default">{{agile_lng_translate 'report-add' 'close'}}</a> 
           <a id="create-ticket" href="javascript:void(0);" class="btn btn-sm btn-primary save" data-loading-text="Create">{{agile_lng_translate 'tickets' 'create'}}</a>
