--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
@@ -16,7 +16,7 @@
                        <tbody>
                          <tr>
                            <td class="image-caption" style="padding: 0px 50px 0px 50px;">
-                              <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240">
+                              <table style="margin: 0 auto;" class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240">
                                 <tbody>
                                     <tr>
                                         <td height="10" width="100%"></td>
