--- a/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
@@ -4,6 +4,7 @@
 	<div class="wrapper-sm">
         <div class="control-group form-group" style="">
         <div class="controls" id="contactTypeAhead">
+        <label>Outbound Number</label>
          <select name="from_numbers" id="twilio_from_numbers" class="form-control required">
         <option value="" style="display:none;">Select a verifed number</option>
         {{#each from}}
@@ -16,6 +17,7 @@
 			{{else}}
 			<!--<div class="pull-left" valign="middle"><h4 class="h4 m-t-xs" id="contentLeftLabel">To :</h4></div> -->
 			<div class="pull-left" style="width: 100%;" >
+       <label>Inbound Number</label>
 				<select name="number" id="contact_number" class="required form-control" style="width: 100%;">
 					{{#each to}}
 						<option value="{{value}}">{{value}} 
