add padding for control group

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -4,7 +4,7 @@
     <div class="modal-header ticket-modal-header">
       <button class="close" data-dismiss="modal">&times;</button>
       <div class="ticket-modal-heading">
-      <i class="icon-plus-sign" style="margin-top: 4px;margin-right: 7px;"></i><h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
+      <i class="icon-plus-sign pull-left m-r-xs link-color" style="margin-top: 1px;"></i><h3 class="modal-title"><i class="icon icon-envelop"></i> {{agile_lng_translate 'tickets' 'create-ticket'}}</h3>
       </div>
     </div>
     <div id="modal-body">
