icon changed for image caption block

--- a/agile-frontend/WebContent/flatfull/tpl/emailbuilder/emailbuilder-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/emailbuilder/emailbuilder-add.html
@@ -72,7 +72,7 @@
         {{/if_equals}}
     </div>
     <div class="form-group right m-r-sm"> 
-        <br>&nbsp;&nbsp;<button class="btn btn-default btn-sm" id="mainsourcepreview"><i class="glyphicon-eye-open glyphicon"></i> {{agile_lng_translate 'web-rules' 'preview'}}</button>
+        <br>&nbsp;&nbsp;<button class="btn btn-default btn-sm" id="mainsourcepreview"><i class="glyphicon-eye-open glyphicon" style="top: 2px;"></i> {{agile_lng_translate 'web-rules' 'preview'}}</button>
     </div>
     <!--<div class="form-group right">
         <br><button class="btn btn-default btn-sm sendTestEmailButton">{{agile_lng_translate 'emailbuilder' 'send-test-email'}}</button>
