added the class for select tag

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-reports-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-reports-template.html
@@ -25,7 +25,7 @@
                     </select>
                 </div>
                 <div class="pull-right" style="padding:0px 2px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 145px;float: right;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 145px;float: right;">
                     </select>
                 </div>    
             </div>
@@ -62,7 +62,7 @@
                     </h3>
                 </div>
                  <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     </h3>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     </select>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 145px;float: right;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 145px;float: right;">
                     </select>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                     </select>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                     <span id="range">{{date-range "today" "-6"}}</span>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                     <span id="range">{{date-range "today" "-6"}}</span>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                     <span id="range">{{date-range "today" "-6"}}</span>
                 </div>
                 <div class="pull-right" style="padding:0px 8px 10px">
-                    <select name="group_names" class="form-control" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
+                    <select name="group_names" class="form-control select-new-theme-nopanel" id="group_names" style="width: 160px;float: right;margin-left: 20px;">
                     </select>
                 </div>
             </div>
