--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -17,15 +17,23 @@
               <div class="row">
                   <input type="hidden" id="contact_id" name="contact_id">
                   <input type="hidden" id="requester_name" name="requester_name">
+                  {{#isNewTheme}}
                   <div class="control-group col-md-12">
+                  {{else}} <div class="control-group col-md-6">{{/isNewTheme}}
                       <label class="control-label">{{agile_lng_translate 'menu' 'email'}} 
                       <span class="field_req">*</span></label>
                       <span class="controls">
                         <input type="text" id="requester_email" autocomplete="off" name="requester_email" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" class="required form-control tickets_email">
+                        {{#isNewTheme}}
                         <i class="icon-plus-sign pull-left m-t-xs link-color"></i>
                         <a class="text-xs pull-left m-t-xs link-color add-ticket-contact" href="javascript:void(0);">
                           {{agile_lng_translate 'tickets' 'add-new-contact'}}
                         </a>
+                        {{else}}
+                          <a class="text-xs pull-right link-color add-ticket-contact" href="javascript:void(0);">
+                          {{agile_lng_translate 'tickets' 'add-new-contact'}}
+                        </a>
+                        {{/isNewTheme}}
                       </span>
                   </div>
                   
@@ -66,6 +74,7 @@
                   </div>
               </div>
             </div>
+            {{#isNewTheme}}
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-12">
@@ -94,6 +103,31 @@
                   </div>
               </div>
             </div>
+            {{else}}
+            <div class="control-group form-group">
+              <div class="row">
+                  <div class="control-group col-md-6">
+                    <label class="control-label">{{agile_lng_translate 'other' 'subject'}} 
+                    <span class="field_req">*</span></label>
+                    <span class="controls">
+                      <input type="text" name="subject" autocomplete="off" class="form-control required"  placeholder="{{agile_lng_translate 'other' 'subject'}}">
+                    </span>
+                  </div>
+                  <div class="control-group col-md-6">
+                      <label class="control-label">{{agile_lng_translate 'contact-details' 'cc'}}</label>
+                      <span class="controls">
+                        <div class="cc-emails-st">
+                          <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
+                              <li class="tag m-r-xs m-b-xs inline-block tag-new-theme">
+                                <input type="text" placeholder="{{agile_lng_translate 'tickets' 'search-contacts'}}" id="cc_email_field" class="cc_emails_st" autocomplete="off">
+                              </li>
+                          </ul>
+                        </div>  
+                      </span>
+                  </div>
+              </div>
+            </div>
+            {{/isNewTheme}}
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-6">
@@ -164,7 +198,7 @@
           {{else}}
           <a href="javascript:void(0);" data-dismiss="modal" class="btn btn-sm btn-default">{{agile_lng_translate 'report-add' 'close'}}</a> 
           {{/isNewTheme}}
-          <a id="create-ticket" href="javascript:void(0);" class="btn btn-sm btn-lg-imp btn-primary save" data-loading-text="Create">{{agile_lng_translate 'tickets' 'create'}}</a>
+          <a id="create-ticket" href="javascript:void(0);" class="btn btn-sm btn-mlg-imp btn-primary save" data-loading-text="Create">{{agile_lng_translate 'tickets' 'create'}}</a>
           <span class="save-status"></span>
       </div>
     </div>
